Add sign block class and add pressure plates to redstone class